@@ -1,5 +1,10 @@
 2005-10-19  Sam Steingold  <sds@gnu.org>
 
+	* execname.c (MAXPATHLEN): define when it is not defined
+	Reported by "Soeren D. Schulze" <soeren.d.schulze@gmx.de>
+
+2005-10-19  Sam Steingold  <sds@gnu.org>
+
 	* modules/rawsock/configure.in (getnameinfo, getaddrinfo)
 	(freeaddrinfo): check
 	* modules/rawsock/sock.lisp (msghdr): removed
